--- a/templates/menu.html
+++ b/templates/menu.html
@@ -64,7 +64,7 @@
 
 
 <li>
-	<a class="ecran" href="{% url conf.home_page.reverse_url %}">Accueil</a>
+	<a class="ecran" href="{% url conf.get_home_page_url %}">Accueil</a>
 	<div class="cadre2">
 		<div class="cadre2b">
 		</div><!-- cadre2b -->
