--- a/templates/portfolios/portfolio_list.html
+++ b/templates/portfolios/portfolio_list.html
@@ -1,14 +1,12 @@
 {% extends "portfolios/portfolio_base.html" %}
 {% block content %}
-    {# principal title for semantic #}
     <h1 class="hidden">Portfolios</h1> 
 {% for entry in entrys %}
-    <h2 class="hidden">{{ entry.category }}</h2>
     <article>
     <figure>
-        {% with picture=entry.get_sorted_pictures.0 %}
-        <a href="{% url "portfolio_view" entry.slug %}#/lightbox/{{ picture.id }}/" title="Voir le portfolio">
-            <img src="{{ MEDIA_URL }}images/previews/square-500/{{ picture.id }}.jpg" alt="{{ picture.title }}" />
+        {% with pict=entry.get_sorted_pictures|first %}
+        <a href="{% url "portfolio_view" entry.slug %}#/lightbox/{{ pict.picture__id }}/" title="Voir le portfolio">
+            <img src="{{ MEDIA_URL }}images/previews/square-500/{{ pict.picture__id }}.jpg" alt="{{ pict.picture__title }}" />
         </a>
         {% endwith %}
         <figcaption>
