--- a/templates/portfolios/portfolio_view.html
+++ b/templates/portfolios/portfolio_view.html
@@ -18,15 +18,15 @@
     <hr />
 <div class="gallery">
 <ul>
-{% for picture in entry.get_sorted_pictures %}
+{% for pict in entry.get_sorted_pictures %}
 <li>
     <figure>
 
-        <a id="{{ picture.id }}" href="{{ MEDIA_URL }}images/previews/large/{{ picture.id }}.jpg" data-lightbox="{{ entry.id }}"{# title="{{ picture.title }}"#}>
-            <img src="{{ MEDIA_URL }}images/previews/square-500/{{ picture.id }}.jpg" alt="{{ picture.title }}" />
+        <a id="{{ pict.picture__id }}" href="{{ MEDIA_URL }}images/previews/large/{{ pict.picture__id }}.jpg" data-lightbox="{{ entry.id }}"{# title="{{ picture.title }}"#}>
+            <img src="{{ MEDIA_URL }}images/previews/square-500/{{ pict.picture__id }}.jpg" alt="{{ pict.picture__title }}" />
         </a>
         <figcaption>
-        <h2>{{ picture.title }}</h2>
+        <h2>{{ pict.picture__title }}</h2>
         </figcaption>
     </figure>
 </li>
