--- a/templates/weblog/weblog_list.html
+++ b/templates/weblog/weblog_list.html
@@ -25,14 +25,15 @@
             {% endif %}
 
             {% if user.is_staff %}
-            <li><div>{{ entry.get_n_view_not_staff }} vues</div></li>
-            <li><div>{{ entry.get_n_view_unique }} unitaires</div></li>
+                <li><div>{{ entry.get_n_view_not_staff }} vues</div></li>
+                <li><div>{{ entry.get_n_view_unique }} unitaires</div></li>
             {% endif %}
         </ul>
 
 		<h1>{{ entry.title }}</h1>
         {% include "weblog/weblog_date.html" %}
 		</header>
+            {% with sorted_picts=entry.get_sorted_pictures|slice:":6" %}
             <figure>
                 <figcaption>
 		            {{ entry.abstract|safe }}
@@ -41,7 +42,7 @@
                 {% if entry.n_pict %} 
                 <div class="gallery">
                     <ul>
-                        {% for id in entry.get_n_first_pictures_id|slice:":6" %}<li><a href="{{ entry.absolute_url }}#/lightbox/{{ id }}/" rel="canonical"><img class="thumbs" src="{{ MEDIA_URL }}images/previews/square-500/{{ id }}.jpg" alt="{{ entry.title }}" /></a></li>{% endfor %}
+                        {% for pict in sorted_picts %}<li><a href="{{ entry.absolute_url }}#/lightbox/{{ pict.picture__id }}/" rel="canonical"><img class="thumbs" src="{{ MEDIA_URL }}images/previews/square-500/{{ pict.picture__id }}.jpg" alt="{{ pict.picture__title }}" /></a></li>{% endfor %}
                     </ul>
                 </div>{#gallery#}
                 <hr />
@@ -52,7 +53,8 @@
                 {% spaceless %}
                 <p class="center-align">
                 {% if entry.n_pict %}
-                    <a href="{{ entry.absolute_url }}#/lightbox/{{ entry.get_n_first_pictures_id.0 }}/" rel="canonical">
+                
+                    <a href="{{ entry.absolute_url }}#/lightbox/{{ sorted_picts.0.picture__id }}/" rel="canonical">
                 {% else %}
                     <a href="{{ entry.absolute_url }}" rel="canonical">
                 {% endif %}
@@ -69,6 +71,7 @@
 		    {# show 'grigri' #}
 		    <div class="v3"></div>{# v3 #}
 		</footer>
+        {% endwith %}
 
 
         </div>{# entry-content #}
