--- a/templates/weblog/weblog_view.html
+++ b/templates/weblog/weblog_view.html
@@ -20,14 +20,14 @@
         {{ entry.content|safe }}
         <h6 class="author"><a class="author small_caps" href="{{ entry.author.web_site}}" rel="author">{{ entry.author.author_name }}</a></h6>
         </fibcaption>
-        {% if entry.get_sorted_pictures %} 
+        {% if entry.n_pict %} 
         <div class="gallery">
             <ul>
                 {% spaceless %}
-                {% for picture in entry.get_sorted_pictures %}
+                {% for pict in entry.get_sorted_pictures %}
                 <li>
-                <a id="{{ picture.id }}" href="{{ MEDIA_URL }}images/previews/large/{{ picture.id }}.jpg" data-lightbox="{{ entry.id }}"{# title="{{ picture.title }}"#}>
-                    <img class="thumbs" src="{{ MEDIA_URL }}images/previews/square-500/{{ picture.id }}.jpg" alt="{{ picture.title }}" {#title="{{ picture.title }}"#} />
+                <a id="{{ pict.picture__id }}" href="{{ MEDIA_URL }}images/previews/large/{{ pict.picture__id }}.jpg" data-lightbox="{{ entry.id }}"{# title="{{ picture.title }}"#}>
+                    <img class="thumbs" src="{{ MEDIA_URL }}images/previews/square-500/{{ pict.picture__id }}.jpg" alt="{{ pict.picture__title }}" {#title="{{ picture.title }}"#} />
                 </a>
                 </li>
                 {% endfor %}
