Improve tests for user app change urls from /account/... to /login, /logout, /profil, /register

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -50,8 +50,8 @@
 						<input type="submit" value="Connexion" />
 						</form>
 					</li>
-					<li><a class="doc popup" href="{% url "user_suscription" %}">Pas encore inscrit ? C'est ici !</a></li>
-					<li><a class="doc popup" href="{% url "user_recovery" %}">Mot de passe perdu ? Cliquez ici…</a></li>
+					<li><a class="doc popup" href="{% url "user_registration" %}">Pas encore inscrit ? C'est ici !</a></li>
+                    {#<li><a class="doc popup" href="{% url "user_recovery" %}">Mot de passe perdu ? Cliquez ici…</a></li>#}
 				{% endif %}
 			</ul><!-- submenu -->
 		</div><!-- cadre2b -->
