--- a/templates/user/user_login.html
+++ b/templates/user/user_login.html
@@ -43,7 +43,7 @@
     {% endfor %}
         <p class="center-align">
         <input type="submit" value="Connexion" />
-        <a class="popup" href="{% url "user_suscription" %}">
+        <a class="popup" href="{% url "user_registration" %}">
             <button type="button">Créer un compte</button>
         </a>
         </p>
