--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
 		{% load humanize %}
 
 		{% block css %}
-                                <link rel="stylesheet" href="{% static 'css/phiroom.min.css' %}" /> {# PROD: le fichier final compilé #}
-        {#                        <link rel="stylesheet/less" href="{% static 'css/controller.less' %}" /> {# DEVEL: le fichier gérant les include #}
+                                        <link rel="stylesheet" href="{% static 'css/phiroom.min.css' %}" /> {# PROD: le fichier final compilé #}
+                                        {#                        <link rel="stylesheet/less" href="{% static 'css/controller.less' %}" /> {# DEVEL: le fichier gérant les include #}
 		{% endblock %}
         {% block pagination %}
         {% endblock %}
@@ -78,8 +78,7 @@
 
 		{# including js files #}
 		<script src="{% static 'scripts/jquery-2.0.3.min.js' %}"></script>
-{#        <script src="{% static 'scripts/phiroomui.js' %}"></script>{# DEVEL not optimized js file #}
-        <script src="{% static 'scripts/phiroomui.compiled.js' %}"></script>{# PROD optimized js file #}
+        <script src="{% static 'scripts/phiroomui.js' %}"></script>{# DEVEL not optimized js file #}
 		{# remove on production #}
         {#                        <script src="{% static 'scripts/less-1.4.1.min.js' %}" type="text/javascript"></script>{# DEVEL less compilation client side #}
 	</body>
