Add some managers and fixtures for page models

--- a/templates/weblog/weblog_base.html
+++ b/templates/weblog/weblog_base.html
@@ -33,7 +33,7 @@
             {% block nav %}
             <ul id="menu">
                 <li><a href="">Portfolios</a></li>
-                <li><a href="{% url "weblog_list" %}">Weblog</a></li>
+                <li><a href="{% url "weblog_home" %}">Weblog</a></li>
                 <li><a href="">Contact</a></li>
                 {% if user.is_staff %}
                 <li><a href="">Librairy</a></li>
