--- a/templates/weblog/weblog_base.html
+++ b/templates/weblog/weblog_base.html
@@ -8,10 +8,10 @@
         {% load static %}
         
         {# PROD: for production only #}
-        <link rel="stylesheet" href="{% static 'css/phiroom.min.css' %}" />{# PROD #}
+        {#<link rel="stylesheet" href="{% static 'css/weblog.min.css' %}" />{# PROD #}
 
         {# DEVEL: for development only #}
-        {#<link rel="stylesheet/less" href="{% static 'css/controller.less' %}" />{# DEVEL #}
+        <link rel="stylesheet/less" href="{% static 'css/weblog-controller.less' %}" />{# DEVEL #}
 
         <link rel="icon" type="image/png" href="{% static 'images/structure/phiroom-favicon.png' %}" />
         <link
@@ -23,40 +23,45 @@
     </head>
     <body>
         <header role="banner">
-            <h1 class="hidden">{{ conf.title }}</h1>
-            <p id="logo">
-                <a href="">
-                    <img src="" alt="logo" />
-                </a>
-            </p>
+            {% spaceless %}
+            {% block header %}
+            <div id="logo">
+                <a href="{% url conf.get_home_page_url_name %}"><img src="{% if conf.logo %}{{ MEDIA_URL }}{{ conf.logo }}{% else %}/assets/images/phiroom-favicon.png{% endif %}" alt="{{ conf.title }}" /></a>
+            </div>
+            <h1>{{ conf.title }}</h1>
+            <h2>{{ conf.subtitle }}</h2>
             <nav role="navigation">
-            {% block nav %}
             <ul id="menu">
-                <li><a href="">Portfolios</a></li>
-                <li><a href="{% url "weblog_home" %}">Weblog</a></li>
-                <li><a href="">Contact</a></li>
+                {% for item in menu %}
+                    <li><a href="{% url item.url_name %}">{{ item.title }}</a></li>
+                {% endfor %}
                 {% if user.is_staff %}
-                <li><a href="">Librairy</a></li>
+                <li><a href="{% url "librairy_home" %}">Librairy</a></li>
                 <li><a href="/admin/">Admin</a></li>
                 {% endif %}
             </ul>
-            {% endblock %}
             </nav>
+            {% endblock %}
+            {% endspaceless %}
         </header>
         {% block side_bar %}
         {% endblock %}
 
-        <section id="content">
-            {% block content %}
+        <section role="main">
+            {% block main %}
             {% endblock %}
         </section>
+
+        <footer role="contentinfo">
+            <p id="powered"><a target="_blank" href="{{ phiroom }}">Powered by Phiroom</a></p>
+        </footer>
 
         {# js files #}
         <script src="{% static 'scripts/jquery-2.0.3.min.js' %}"></script>
         <script src="{% static 'scripts/phiroomui.js' %}"></script>{# DEVEL not optimized js file #}
 
         {# remove on production #}
-        {#<script src="{% static 'scripts/less-1.4.1.min.js' %}" type="text/javascript"></script>{# DEVEL less compilation client side #}
+        <script src="{% static 'scripts/less-2.1.0.min.js' %}" type="text/javascript"></script>{# DEVEL less compilation client side #}
 
     </body>
 </html>
