--- a/templates/assets/css/weblog/palette.less
+++ b/templates/assets/css/weblog/palette.less
@@ -1,11 +1,14 @@
 // Color Palette
 
-@bg: #FF;          // body background
+@bg: #FFF;          // body background
 @text: #575757;        // body text
 @headings: #222;    // headings
 @time: #969696;     // date indications
-@desc: #585858;     // descriptions
+@desc:  @time;     // descriptions
 @links: @text;      // links
 @links-h: #000;     // links hover, active and focus
 @hr: #CCC;          // hrules
-
+@tags: @time;       // tags list
+@code-bg: @text;      // code blocks background
+@code: @bg;         // code blocks color
+@code-border: #000; // code blocks border
