--- a/templates/assets/css/weblog/typo.less
+++ b/templates/assets/css/weblog/typo.less
@@ -122,4 +122,7 @@
 @mono: droid_sans_mono, "Lucida Console", Monaco, monospace;
 
 
-
+// small caps
+.small-caps {
+    font-variant: small-caps;
+}
