improve css and templates for weblog app

--- a/templates/assets/css/weblog-controller.less
+++ b/templates/assets/css/weblog-controller.less
@@ -45,3 +45,8 @@
 // layout
 @import '@{base-css}weblog/layout.less';
 
+// admin
+@import '@{base-css}weblog/admin.less';
+
+// forms
+@import '@{base-css}forms.less';
