--- a/templates/assets/css/weblog/palette.less
+++ b/templates/assets/css/weblog/palette.less
@@ -12,3 +12,21 @@
 @code-bg: @text;      // code blocks background
 @code: @bg;         // code blocks color
 @code-border: #000; // code blocks border
+@admin-overlay-bg: #000; // administration overlay background color
+@admin-overlay-opacity: 0.6; // administration overlay opacity
+
+
+// forms
+@invalid-shadow: 0 0 3px #970000; // invalid form elements shadow
+@help-text: @text; // help text color
+@inputs-bg: @bg; // inputs (textarea, input etc.) background color
+@inputs-border: 1px solid #000; // inputs border
+@inputs-text-color: @text; // inputs text color
+@inputs-hover-focus-shadow: 0 0 3px #000; // inputs :hover and :focus shadow
+@submit-button-border: 1px solid #000; // submit and buttons border
+@submit-button-shadow: 0 0 1px #000; // submit and buttons shadow
+@submit-button: @text; // submit and buttons text color
+@submit-button-hover-focus: #000; // submit and buttons :hover and :focus text color
+@submit-button-hover-focus-shadow: 0 0 3px #000; // submit and buttons :hover and :focus shadow
+
+
