--- a/templates/weblog/weblog_base.html
+++ b/templates/weblog/weblog_base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ user.profil.lang|default:"fr" }}">
+<html lang="{{ user.profil.lang|default:"fr" }}" ng-app="weblogApp">
     <head>
         <title>{% block title %}{% endblock title %}</title>
         <meta charset="utf-8" />
@@ -21,7 +21,11 @@
                                           {#href = "{% url "feed" %}"#}
         />
     </head>
-    <body>
+    <body ng-controller="weblogAdminCtrl">
+        {% if user.is_staff %}
+        {% block admin %}
+        {% endblock %}
+        {% endif %}
         <header role="banner">
             {% spaceless %}
             {% block header %}
@@ -55,13 +59,24 @@
         <footer role="contentinfo">
             <p id="powered"><a target="_blank" href="{{ phiroom }}">Powered by Phiroom</a></p>
         </footer>
-
+        <div id="admin-overlay" ng-show="edit"></div>
+        
+        {% if user.is_staff %}
         {# js files #}
-        <script src="{% static 'scripts/jquery-2.0.3.min.js' %}"></script>
-        <script src="{% static 'scripts/phiroomui.js' %}"></script>{# DEVEL not optimized js file #}
+
+        {# angularjs admin files go here #}
+
+        {# for production #}
+        {# <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>{# angularjs from google cdn #}
+
+        {# for developpment, remove on production #}
+        <script src="{% static 'scripts/angular.min.js' %}"></script>{# local angularjs #}
+
+        {% endif %}
 
         {# remove on production #}
         <script src="{% static 'scripts/less-2.1.0.min.js' %}" type="text/javascript"></script>{# DEVEL less compilation client side #}
+
 
     </body>
 </html>
