--- a/templates/assets/css/weblog/admin.less
+++ b/templates/assets/css/weblog/admin.less
@@ -1,11 +1,12 @@
 // Weblog admin design
 
 // edit link
-#edit {
+#admin-links {
     display: block;
     position: absolute;
     top: 0;
-    right: 0;
+    right: 16px;
+    text-align: right;
 }
 
 // overlay containing admin interface
