--- a/templates/assets/css/weblog/layout.less
+++ b/templates/assets/css/weblog/layout.less
@@ -79,7 +79,7 @@ header[role="banner"] {
 
 // main section
 section[role="main"] {
-    max-width: 750px;
+    max-width: 782px;
     margin: 1em auto 4em auto;
     nav#pagination {
         margin-top: 5em;
@@ -100,6 +100,7 @@ section[role="main"] {
 
 // articles
 article {
+    padding: 0px 16px;
     position: relative;
     margin-top: 4em;
     time {
