--- a/frontend/app/css/weblog/layout.less
+++ b/frontend/app/css/weblog/layout.less
@@ -1,11 +1,25 @@
 // Weblog layout
 
+// some variables :
+@footer-height: 90px;
+
+
+html {
+    height: 100%;
+}
+
 body {
     color: @text;
+    min-height: 100%;
+    position: relative;
     background-color: @bg;
     font-size: 100%;
     line-height: 1.5em;
     font-family: @sans;
+    margin: 0;
+    padding: 0;
+    padding-bottom: @footer-height;
+    * {-moz-box-sizing: border-box; box-sizing: border-box;}
 }
 
 
@@ -98,6 +112,20 @@ section[role="main"] {
     }
 }
 
+
+// footer
+footer[role="contentinfo"] {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: @footer-height;
+    text-align: center;
+    border-top: 1px solid @hr;
+    padding: 30px 0 30px 0;
+    * {-moz-box-sizing: border-box; box-sizing: border-box;}
+
+}
+
 // articles
 article {
     padding: 0px 16px;
@@ -181,12 +209,6 @@ h6.author {
     }
 }
 
-// footer
-footer[role="contentinfo"] {
-    text-align: center;
-    border-top: 1px solid @hr;
-    padding: 30px 0 30px 0;
-}
 
 pre {
     background-color: @code-bg;
