--- a/frontend/app/partials/weblog/weblog_detail.html
+++ b/frontend/app/partials/weblog/weblog_detail.html
@@ -8,7 +8,7 @@
     <p class="description">{{ post.description }}</p>
     </header>
     <div class="content" ng-bind-html="post.content"></div>
-    <h6 class="author"><a href="" rel="author">"Frédéric Lavilotte-Rolle"</a></h6>
+    <h6 class="author"><a href="" rel="author">Frédéric Lavilotte-Rolle</a></h6>
     <footer>
         <ul id="tags">
             <li ng-repeat="tag in post.tags"><a href=""
