--- a/frontend/app/partials/weblog/weblog_list.html
+++ b/frontend/app/partials/weblog/weblog_list.html
@@ -5,11 +5,11 @@
         <li><a  href="">New</a></li>
     </ul>
     <ng-include src="'/assets/partials/weblog/weblog_time.html'"></ng-include>
-    <h1><a href="#/{{ post.pk }}">{{ post.title }}</a></h1>
+    <h1><a href="{{ post.pk }}/">{{ post.title }}</a></h1>
     </header>
     <div class="content" ng-bind-html="post.abstract"></div>
     <footer>
-        <p><a href="#/{{ post.pk }}">Read post</a></p>
+        <p><a href="{{ post.pk }}/">Read post</a></p>
     </footer>
     </article>
 <nav id="pagination">
