--- a/frontend/app/partials/weblog/weblog_detail.html
+++ b/frontend/app/partials/weblog/weblog_detail.html
@@ -11,7 +11,7 @@
     <h6 class="author"><a href="" rel="author">Frédéric Lavilotte-Rolle</a></h6>
     <footer>
         <ul id="tags">
-            <li ng-repeat="tag in post.tags"><a href=""
+            <li ng-repeat="tag in post.tags"><a href="tag/{{ tag.slug }}"
                 title="See all &#34;{{ tag.name }}&#34; related posts.">{{ tag.name }}</a></li>
         </ul>
     </footer>
