--- a/statics/css/weblog/palette.less
+++ b/statics/css/weblog/palette.less
@@ -7,11 +7,16 @@
 @desc:  @time;     // descriptions
 @links: @text;      // links
 @links-h: #000;     // links hover, active and focus
+@selected-links: #000;   //selected links (current url) 
 @hr: #CCC;          // hrules
 @tags: @time;       // tags list
 @code-bg: @text;      // code blocks background
 @code: @bg;         // code blocks color
 @code-border: #000; // code blocks border
+@degrade-start: #444444; // starting color for default degrade
+@degrade-end: #222222; // ending color for default degrade
+@degrade-bg: #222222; // background color for default degrade
+@default-arrow: #444444; // color of default arrows
 @admin-overlay-bg: #000; // administration overlay background color
 @admin-overlay-opacity: 0.6; // administration overlay opacity
 
